Add live descriptor discovery
